------------------------------------------------------------------------------
name:          xmonadfn
version:       0.13
synopsis:      XMonad fn
homepage:      http://xmonad.org
license:       BSD2
license-file:  LICENSE
author:        Peter Jones <pjones@devalot.com>
maintainer:    Peter Jones <pjones@devalot.com>
copyright:     Copyright (c) 2016,2017 Peter J. Jones
category:      Graphics
build-type:    Simple
cabal-version: >=1.8

------------------------------------------------------------------------------
executable xmonadfn
  main-is: xmonad.hs
  ghc-options: -Wall -fno-warn-missing-signatures -ilib -v -dynamic -threaded
  build-depends: base, containers, xmonad, xmonad-contrib